# multiPartGet

./: CMakeLists.txt  FileDownloader.cpp  FileDownloader.hpp  README.md  SettingsHandler.cpp  SettingsHandler.hpp  main.cpp
